examples/with-hostname/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-with-hostname
  labels:
    k8s-app: nginx-service-with-hostname
spec:
  ports:
  - port: 90
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: nginx-service-with-hostname
