examples/with-hostname/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplelb-tls-with-hostname
  annotations:
    rdns.rancher.io/hostname: 'foo.bar.com'
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - foo.bar.com
    secretName: simplelb-tls-with-hostname
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheaders-with-hostname
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheaders-with-hostname
          servicePort: 80
