examples/with-hostname/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplelb-with-hostname
  annotations:
    rdns.rancher.io/hostname: 'foo.bar.com'
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheaders-with-hostname
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheaders-with-hostname
          servicePort: 80
